[package]
name = "test-wifi-scan"
version = "0.1.0"
authors = ["Frederick <frederick@vollbrecht.cc>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = { version = "0.40.1", features = [
    "default",
    "embassy-sync",
    "critical-section",
    "edge-executor",
] }
esp-idf-svc = { version = "0.45.0", features = [
    "std",
    "nightly",
    "experimental",
    "embassy-time-driver",
    "embassy-time-isr-queue",
    "alloc",
] }

embedded-svc = { version = "*" }

anyhow = { version = "*" }
log = { version = "*" }

[build-dependencies]
embuild = "0.31.1"

# v5.0 and master require patches due to https://github.com/esp-rs/esp-idf-template/issues/91#issuecomment-1508241327
[patch.crates-io]
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" }
